--- a/src/Calculator/calc_style.css
+++ b/src/Calculator/calc_style.css
@@ -1,5 +1,15 @@
 @charset "utf-8";
 
+body {
+    width : 225px;
+    padding : 10px;
+    border : 5px solid gray;
+    margin : 10;
+}
 .calculation {
-    position: absolute; top: 30px; left: 180px;
+    position: absolute; top: 70px; left: 200px;
+}
+
+table, tr {
+    border: 3px;
 }
