--- a/src/Calculator/calc_style.css
+++ b/src/Calculator/calc_style.css
@@ -1,5 +1,4 @@
 @charset "utf-8";
-
 body {
     width : 225px;
     padding : 10px;
@@ -7,11 +6,21 @@ body {
     margin : 10px;
 }
 
+#reset {
+    font-style: italic;
+    color: blue;
+}
+
 #dot {
     position: absolute; top: 326px; left: 140px;
 }
 .calculation {
     position: absolute; top: 70px; left: 200px;
+}
+
+.calculation > input {
+    font-weight: bold;
+    color: red;
 }
 
 table, tr {
